# youtube

./: .gitignore  INSTALL_GUIDE_WINDOWS.md  README.md  TrendFollowGrid.mq5  install_windows.bat  install_windows.ps1  pyproject.toml  requirements.txt
configs/: default.yaml
dashboard/: __init__.py  app.py
polyarb-signal/: .gitignore  CHANGELOG.md  README.md  USER_MANUAL.md  WEBSOCKET_NOTES.md  installer.nsh  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.main.json  vite.config.ts
polyarb-signal/scripts/: build-win.js
polyarb-signal/src/main/: index.ts  preload.ts
polyarb-signal/src/main/services/: clobClient.ts  gammaClient.ts  signalEngine.ts  telegramNotifier.ts  tieringSystem.ts  wsClient.ts
polyarb-signal/src/main/utils/: autoLaunch.ts  logger.ts  settingsStore.ts
polyarb-signal/src/renderer/: App.tsx  index.css  index.html  main.tsx
polyarb-signal/src/renderer/pages/: Dashboard.tsx  Logs.tsx  Markets.tsx  Settings.tsx
polyarb-signal/src/shared/constants/: index.ts
polyarb-signal/src/shared/types/: index.ts
scripts/: __init__.py  entity_linker.py  fetch_research.py  fetch_youtube.py  init_db.py  migrate_db.py  report_weekly.py  run_all.py  smoke_test_research.py  smoke_test_youtube_ingestion.py  train_playbook.py  validate_youtube_auth.py
src/: __init__.py
src/anime/: __init__.py  anilist.py  entity_linker.py  rss_parser.py
src/db/: __init__.py  connection.py  models.py  repository.py
src/modules/: __init__.py  analytics.py  content.py  playbook.py  research.py  scheduler.py
src/playbook/: __init__.py  feature_extractor.py  model_trainer.py  rule_generator.py
src/services/: tasks.py
src/utils/: __init__.py  config.py  logger.py
src/youtube/: __init__.py  client.py  oauth.py
